# justsql

./: Cargo.toml  Dockerfile  README.md  justsql.config.yaml  justsql.config.yml  todo.md
.github/: dependabot.yml
.github/workflows/: rust.yml
broken_queries/: signup.sql
client/: client.tsx
errors/: missing_parameter.sql
examples/: all_users.sql  get_user.sql  last_active_users.sql  login.sql  simple_addition.sql  simple_concatenation.sql
src/: args.rs  binding.rs  decorator.rs  main.rs  module.rs  parser.rs  query.rs  row_type.rs  util.rs
src/ast/: decorator.rs  mod.rs  module.rs  parser.rs  sql.rs
src/codegen/: mod.rs  module.rs  result.rs  span_ref.rs  toposort.rs
src/codegen/ast/: ast.rs  decorator.rs  mod.rs  parser.rs  sql.rs
src/codegen/ir/: front_matter.rs  mod.rs  reserved_words.rs  statement.rs
src/command/: init.rs  mod.rs  peek.rs  print.rs  run.rs  server.rs
src/config/: auth.rs  config.rs  env_value.rs  mod.rs  secret.rs
src/engine/: evaluator.rs  mod.rs
src/engine/importer/: as_needed.rs  file_type.rs  importer.rs  mod.rs  module_collection.rs  upfront.rs  watching.rs
src/server/: auth.rs  init.rs  mod.rs  routes.rs
src/util/: error_printing.rs  matches_map.rs  mixed_ref.rs  mod.rs  path.rs
