[package]
name = "shorthand"
version = "0.1.0"
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
nom = {version = "6.1", features = ["alloc"]}
