[package]
name = "justsql"
version = "0.1.0"
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "justsql"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
nom = {version = "6.1", features = ["alloc", "regexp"]}
thiserror = "1"
regex = "1.4"
clap = "3.0.0-beta.2"
anyhow = "1.0"
tokio = { version = "1.5.0", features=[ "rt"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "decimal" ] }
chrono = { version = "0.4", features = ["serde"] }
decimal = "2.1"
uuid = { version = "0.8", features = ["v5", "v4", "serde"] }
