[package]
name = "justsql"
version = "0.2.0"
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "justsql"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.17"
nom = {version = "6.1", features = ["alloc", "regexp"]}
thiserror = "1"
regex = "1.4"
clap = "3.0.0-beta.2"
anyhow = "1.0"
tokio = { version = "1.16.1", features=[ "rt"] }
sqlx = { version = "0.4", features = [ "runtime-actix-rustls", "postgres", "json", "chrono", "uuid", "decimal" ] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.2" } # `time` is needed for actix web
decimal = "2.1"
uuid = { version = "0.8", features = ["v5", "v4", "serde"] }
futures = "0.3"
glob = "0.3"


actix-web = "3.0"
actix-rt = "1.1"
actix-cors = "0.5"

env_logger = "0.8"
jsonwebtoken = "7"
either = "1.6"
log = "0.4"

walkdir = "2"
notify = "4.0"
im = "15"
base64 = "0.13"
dotenv = "0.15"
